modified:   manifest.jps scripts/memoryConfig.sh